# Game-UI-Reference-Cli

./: .gitignore  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md  pyproject.toml  ui_ref_cli.py
.claude/skills/game-ui-spec/: SKILL.md
.claude/skills/game-ui-spec/examples/: README.md
.claude/skills/game-ui-spec/references/: annotated-wireframe-svg.md  engine-binding.md  spec-structure.md  ui-ref-cli.md  ux-heuristics.md
.claude/skills/game-ui-spec/templates/: build_docx.py  build_pdf.py  decisions-tracker.md  design-tokens.md  per-screen.md  spec-pdf.css  spec-skeleton.md  usability-test.md  validate_wireframe.py
.claude/skills/game-ux-ui-design/: SKILL.md
.claude/skills/game-ux-ui-design/examples/: README.md
.claude/skills/game-ux-ui-design/references/: annotated-wireframe-svg.md  art-concept-imagegen.md  design-structure.md  engine-binding.md  screen-exemplars.md  ui-ref-cli.md  ux-heuristics.md
.claude/skills/game-ux-ui-design/templates/: art-concept-brief.md  build_docx.py  build_pdf.py  decisions-tracker.md  design-pdf.css  design-skeleton.md  design-tokens.md  (+4 more)
examples/lucid-dawn/: README.md  lucid_dawn_ui_ux_decisions.md  lucid_dawn_ui_ux_design.en.md  lucid_dawn_ui_ux_design.ja.md  lucid_dawn_ui_ux_design.ko.md  lucid_dawn_ui_ux_design.zh.md  lucid_dawn_ui_ux_spec.en.md  lucid_dawn_ui_ux_spec.ja.md  lucid_dawn_ui_ux_spec.ko.md  lucid_dawn_ui_ux_spec.zh.md  lucid_dawn_ui_ux_tokens.md
examples/lucid-dawn/art-concepts/: levelup-ui-art-concept.prompt.md
examples/lucid-dawn/references/: CITATIONS.md  local_ui_refs_manifest.md
